--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,5 +1,7 @@
-<ion-view view-title="Profile">
-  <ion-content class="padding">
-    <h1>Profile Here</h1>
-  </ion-content>
+<ion-view title="Profile">
+<ion-content>
+
+stuff
+
+<ion-content>
 </ion-view>
