--- a/www/templates/dash-classified.html
+++ b/www/templates/dash-classified.html
@@ -1,5 +1,5 @@
 <ion-view title="UMKC">
-  <ion-header-bar class="bar-subheader">
+  <ion-header-bar class="bar-subheader tabs-striped tabs-top">
     <div class="row">
       <div class="col col 25">
         <a class="tab-item" href="#/tab/dash">Featured</a>
@@ -8,7 +8,7 @@
         <a class="tab-item" href="#tab/bulletin">Bulletin</a>
       </div>
       <div class="col col 25">
-        <a class="tab-item" href="#tab/classified">Classifed</a>
+        <a class="tab-item tab-item-active" href="#tab/classified">Classifed</a>
       </div>
       <div class="col col 25">
         <a class="tab-item" href="#tab/search">Search</a>
@@ -16,9 +16,62 @@
     </div>
   </ion-header-bar>
 
-  <ion-content>
+  <ion-content class="padding">
 
-Classified
+<div class="row">
+  <div class="col col-50" >
+      <div class="list-card">
+          <a class="item item-image">
+            <img class="full-image" src="img/event8.jpg" >
+          </a>
+    <div class="item item-divider footerCard">
+      Movie
+      <br/>
+      <i class="icon ion-ios-heart"></i>
+      </div>
+    </div>
+  </div>
 
+<div class="col col-50" >
+    <div class="list-card">
+        <a class="item item-image">
+          <img class="full-image" src="img/event9.jpg" >
+        </a>
+  <div class="item item-divider footerCard">
+    Movie
+    <br/>
+    <i class="icon ion-ios-heart"></i>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="row">
+  <div class="col col-50" >
+      <div class="list-card">
+          <a class="item item-image">
+            <img class="full-image" src="img/event6.jpg" >
+          </a>
+    <div class="item item-divider footerCard">
+Movie
+      <br/>
+      <i class="icon ion-ios-heart"></i>
+      </div>
+    </div>
+  </div>
+
+<div class="col col-50" >
+    <div class="list-card">
+        <a class="item item-image">
+          <img class="full-image" src="img/event7.jpg" >
+        </a>
+  <div class="item item-divider footerCard">
+  Movie
+    <br/>
+    <i class="icon ion-ios-heart"></i>
+    </div>
+  </div>
+</div>
+</div>
   </ion-content>
   </ion-view>
