--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,11 +1,11 @@
 <ion-view view-title="UMKC">
-  <ion-header-bar class="bar-subheader">
+  <ion-header-bar class="bar-subheader tabs-striped tabs-top">
     <div class="row">
       <div class="col col 25">
-        <a class="tab-item" href="#/tab/dash">Featured</a>
+        <a class="tab-item tab-item-active" href="#/tab/dash">Featured</a>
       </div>
       <div class="col col 25">
-        <a class="tab-item" href="#tab/bulletin">Bulletin</a>
+        <a class="tab-item " href="#tab/bulletin">Bulletin</a>
       </div>
       <div class="col col 25">
         <a class="tab-item" href="#tab/classified">Classifed</a>
@@ -21,8 +21,8 @@
 <div class="row">
   <div class="col col-50" >
       <div class="list-card">
-          <a class="item item-thumbnail-center">
-            <img style="height: 130px;" src="img/event1.jpg" >
+          <a class="item item-image">
+            <img class="full-image" src="img/event1.jpg" >
           </a>
     <div class="item item-divider footerCard">
       Six Flags
@@ -34,8 +34,8 @@
 
 <div class="col col-50" >
     <div class="list-card">
-        <a class="item item-thumbnail-center">
-          <img style="height: 130px;" src="img/event2.jpg" >
+        <a class="item item-image">
+          <img class="full-image" src="img/event2.jpg" >
         </a>
   <div class="item item-divider footerCard">
     Literacy Event
@@ -49,8 +49,8 @@
 <div class="row">
   <div class="col col-50" >
       <div class="list-card">
-          <a class="item item-thumbnail-center">
-            <img style="height: 130px;" src="img/event10.jpg" >
+          <a class="item item-image">
+            <img class="full-image" src="img/event10.jpg" >
           </a>
     <div class="item item-divider footerCard">
 WorkAholics
@@ -62,17 +62,16 @@ WorkAholics
 
 <div class="col col-50" >
     <div class="list-card">
-        <a class="item item-thumbnail-center">
-          <img style="height: 130px;" src="img/calendar_2015_geometric_.png" >
+        <a class="item item-image">
+          <img class="full-image" src="img/event3.jpg" >
         </a>
   <div class="item item-divider footerCard">
-    Calendar Design
+    Basket Ball
     <br/>
     <i class="icon ion-ios-heart"></i>
     </div>
   </div>
 </div>
 </div>
-
   </ion-content>
 </ion-view>
