Install gulp locally, Added the Following tab in Home page

--- a/www/templates/dash-bulletin.html
+++ b/www/templates/dash-bulletin.html
@@ -1,16 +1,19 @@
-<ion-view title="UMKC">
+<ion-view view-title="UMKC">
   <ion-header-bar class="bar-subheader tabs-striped tabs-top">
     <div class="row">
-      <div class="col col 25">
+      <div class="col col-20">
         <a class="tab-item" href="#/tab/dash">Featured</a>
       </div>
-      <div class="col col 25">
+      <div class="col col-20">
         <a class="tab-item tab-item-active" href="#tab/bulletin">Bulletin</a>
       </div>
-      <div class="col col 25">
+      <div class="col col-20">
+        <a class="tab-item" href="#tab/following">Following</a>
+      </div>
+      <div class="col col-20">
         <a class="tab-item" href="#tab/classified">Classifed</a>
       </div>
-      <div class="col col 25">
+      <div class="col col-20">
         <a class="tab-item" href="#tab/search">Search</a>
       </div>
     </div>
@@ -18,60 +21,54 @@
 
   <ion-content class="padding">
 
-<div class="row">
-  <div class="col col-50" >
-      <div class="list-card">
-          <a class="item item-image">
-            <img class="full-image" src="img/event4.jpg" >
-          </a>
-    <div class="item item-divider footerCard">
-      Movie
-      <br/>
-      <i class="icon ion-ios-heart"></i>
+    <div class="row">
+      <div class="col col-50" >
+        <div class="list-card">
+          <a class="item item-image"><img class="full-image" src="img/event5.jpg"></a>
+          <div class="item item-divider footerCard">
+            Six Flags
+            <br/>
+            <i class="icon ion-ios-heart"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col col-50" >
+        <div class="list-card">
+          <a class="item item-image"><img class="full-image" src="img/event6.jpg"></a>
+          <div class="item item-divider footerCard">
+            Literacy Event
+            <br/>
+            <i class="icon ion-ios-heart"></i>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-<div class="col col-50" >
-    <div class="list-card">
-        <a class="item item-image">
-          <img class="full-image" src="img/event5.jpg" >
-        </a>
-  <div class="item item-divider footerCard">
-    Movie
-    <br/>
-    <i class="icon ion-ios-heart"></i>
-    </div>
-  </div>
-</div>
-</div>
+    <div class="row">
+      <div class="col col-50" >
+        <div class="list-card">
+          <a class="item item-image"><img class="full-image" src="img/event7.jpg"></a>
+          <div class="item item-divider footerCard">
+            WorkAholics
+            <br/>
+            <i class="icon ion-ios-heart"></i>
+          </div>
+        </div>
+      </div>
 
-<div class="row">
-  <div class="col col-50" >
-      <div class="list-card">
-          <a class="item item-image">
-            <img class="full-image" src="img/event6.jpg" >
-          </a>
-    <div class="item item-divider footerCard">
-Movie
-      <br/>
-      <i class="icon ion-ios-heart"></i>
+      <div class="col col-50" >
+        <div class="list-card">
+          <a class="item item-image"><img class="full-image" src="img/event8.jpg"></a>
+          <div class="item item-divider footerCard">
+            Basket Ball
+            <br/>
+            <i class="icon ion-ios-heart"></i>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-<div class="col col-50" >
-    <div class="list-card">
-        <a class="item item-image">
-          <img class="full-image" src="img/event7.jpg" >
-        </a>
-  <div class="item item-divider footerCard">
-  Movie
-    <br/>
-    <i class="icon ion-ios-heart"></i>
-    </div>
-  </div>
-</div>
-</div>
   </ion-content>
-  </ion-view>
+
+</ion-view>
