proper controlling and routing implemented

--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,14 +1,14 @@
-<ion-view title="Browsing">
+<ion-view title="UMKC">
     <ion-header-bar class="bar-subheader tabs-striped tabs-top">
         <div class="row">
             <div class="col col-20">
-              <a class="tab-item tab-item-active" ui-sref="home.browse.featured">Featured</a>
+              <a class="tab-item " ui-sref="home.browse.featured">Featured</a>
             </div>
             <div class="col col-20">
               <a class="tab-item" ui-sref="home.browse.bulletin">Bulletin</a>
             </div>
             <div class="col col-20">
-              <a class="tab-item" ui-sref="home.browse.following">Following</a>
+              <a class="tab-item tab-item-active" ui-sref="home.browse.following">Following</a>
             </div>
             <div class="col col-20">
               <a class="tab-item" ui-sref="home.browse.classified">Classifed</a>
