--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -3,7 +3,7 @@
   <ion-tab title="Browse" icon="ion-ionic" ui-sref="home.browse.featured">
       <ion-nav-view name="browse"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="Chat"  icon="ion-ios-chatbubble" ui-sref="home.chat">
+  <ion-tab title="Chat"  icon="ion-ios-chatbubble" ui-sref="home.chat.people">
       <ion-nav-view name="chat"></ion-nav-view>
   </ion-tab>
   <ion-tab title="Profile" icon="ion-ios-person" ui-sref="home.profile">
