added details page

--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,20 +1,23 @@
 <ion-view title="UMKC">
+    <ion-nav-buttons side="primary">
+      <button class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-header-bar class="bar-subheader tabs-striped tabs-top">
         <div class="row">
             <div class="col col-20">
-              <a class="tab-item " ui-sref="home.browse.featured">Featured</a>
+              <a nav-direction="back" class="tab-item " ui-sref="home.browse.featured">Featured</a>
             </div>
             <div class="col col-20">
-              <a class="tab-item" ui-sref="home.browse.bulletin">Bulletin</a>
+              <a nav-direction="back" class="tab-item" ui-sref="home.browse.bulletin">Bulletin</a>
             </div>
             <div class="col col-20">
-              <a class="tab-item tab-item-active" ui-sref="home.browse.following">Following</a>
+              <a nav-direction="back" class="tab-item tab-item-active" ui-sref="home.browse.following">Following</a>
             </div>
             <div class="col col-20">
-              <a class="tab-item" ui-sref="home.browse.classified">Classifed</a>
+              <a nav-direction="back" class="tab-item" ui-sref="home.browse.classified">Classifed</a>
             </div>
             <div class="col col-20">
-              <a class="tab-item" ui-sref="home.browse.search">Search</a>
+              <a nav-direction="back" class="tab-item" ui-sref="home.browse.search">Search</a>
             </div>
         </div>
     </ion-header-bar>
