--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -1,7 +1,7 @@
 <div class="row">
       <div class="col col-50" >
         <div class="list-card">
-          <a class="item item-image"><img class="full-image" src="img/event1.jpg"></a>
+          <a class="item item-image" ui-sref="home.details({dId: 1})"><img class="full-image" src="img/event1.jpg"></a>
           <div class="item item-divider footerCard">
             Six Flags
             <br/>
@@ -12,7 +12,7 @@
 
       <div class="col col-50" >
         <div class="list-card">
-          <a class="item item-image"><img class="full-image" src="img/event2.jpg"></a>
+          <a class="item item-image" ui-sref="home.details({dId: 2})"><img class="full-image" src="img/event2.jpg"></a>
           <div class="item item-divider footerCard">
             Literacy Event
             <br/>
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col col-50" >
         <div class="list-card">
-          <a class="item item-image"><img class="full-image" src="img/event3.jpg"></a>
+          <a class="item item-image" ui-sref="home.details({dId: 3})""><img class="full-image" src="img/event3.jpg"></a>
           <div class="item item-divider footerCard">
             WorkAholics
             <br/>
@@ -36,7 +36,7 @@
 
       <div class="col col-50" >
         <div class="list-card">
-          <a class="item item-image"><img class="full-image" src="img/event4.jpg"></a>
+          <a class="item item-image" ui-sref="home.details({dId: 4})""><img class="full-image" src="img/event4.jpg"></a>
           <div class="item item-divider footerCard">
             Basket Ball
             <br/>
