Changed the color of the top header

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,8 @@
 /* Empty. Add your own CSS if you like */
 .footerCard{
-  height: 50px;
-  font-size:.9em;
+	height: 50px;
+	font-size:.9em;
+}
+.background-grey{
+	background-color: #EDEDED;
 }
