--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -2,25 +2,18 @@
     <ion-nav-buttons side="primary">
       <button class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    <ion-header-bar class="bar-subheader tabs-striped tabs-top">
-        <div class="row">
-            <div class="col col-20">
-              <a nav-direction="back" class="tab-item " ui-sref="home.browse.featured">Featured</a>
-            </div>
-            <div class="col col-20">
-              <a nav-direction="back" class="tab-item" ui-sref="home.browse.bulletin">Bulletin</a>
-            </div>
-            <div class="col col-20">
-              <a nav-direction="back" class="tab-item tab-item-active" ui-sref="home.browse.following">Following</a>
-            </div>
-            <div class="col col-20">
-              <a nav-direction="back" class="tab-item" ui-sref="home.browse.classified">Classifed</a>
-            </div>
-            <div class="col col-20">
-              <a nav-direction="back" class="tab-item" ui-sref="home.browse.search">Search</a>
-            </div>
-        </div>
-    </ion-header-bar>
+    <ion-tabs class="tabs-icon-top tabs-striped tabs-positive tabs-top">
+        <ion-tab title="Featured" icon="ion-star" ui-sref="home.browse.featured">
+        </ion-tab>
+        <ion-tab title="Bulletin"  icon="ion-calendar" ui-sref="home.browse.bulletin">
+        </ion-tab>
+        <ion-tab title="Following" icon="ion-android-people" ui-sref="home.browse.following">
+        </ion-tab>
+        <ion-tab title="Classified" icon="ion-android-list" ui-sref="home.browse.classified">
+        </ion-tab>
+        <ion-tab title="Search" icon="ion-ios-search" ui-sref="home.browse.search">
+        </ion-tab>
+    </ion-tabs>
     <ion-content has-header="true" padding="true">
       <div ui-view name="browsing"></div>
     </ion-content>
