--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-icon-top tabs-dark">
 
-  <ion-tab title="Browse" icon="ion-ionic" ui-sref="home.browse.featured">
+  <ion-tab title="Browse" icon="ion-eye" ui-sref="home.browse.featured">
       <ion-nav-view name="browse"></ion-nav-view>
   </ion-tab>
   <ion-tab title="Chat"  icon="ion-ios-chatbubble" ui-sref="home.chat">
@@ -9,7 +9,7 @@
   <ion-tab title="Profile" icon="ion-ios-person" ui-sref="home.profile">
       <ion-nav-view name="profile"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="Post" icon="ion-ios-plus" ui-sref="home.post">
+  <ion-tab title="Post" icon="ion-ios-compose-outline" ui-sref="home.post">
       <ion-nav-view name="post"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
