--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,21 +1,20 @@
 <ion-view title="UMKC">
     
-    <ion-nav-buttons side="secondary">
-      <button class="button button-icon icon ion-ios-location"></button>
-    </ion-nav-buttons>
-    <ion-tabs class=" tabs-striped tabs-positive tabs-top">
-        <ion-tab title="Featured"  ui-sref="home.browse.featured">
+    <ion-nav-buttons></ion-nav-buttons> <!-- This code here actually fixes the back button bug! -->
+
+    <ion-tabs class="tabs-striped tabs-top">
+        <ion-tab title="Featured" ui-sref="home.browse.featured">
         </ion-tab>
-        <ion-tab title="Bulletin"  ui-sref="home.browse.bulletin">
+        <ion-tab title="Bulletin" ui-sref="home.browse.bulletin">
         </ion-tab>
-        <ion-tab title="Following"  ui-sref="home.browse.following">
+        <ion-tab title="Following" ui-sref="home.browse.following">
         </ion-tab>
-        <ion-tab title="Classified"  ui-sref="home.browse.classified">
+        <ion-tab title="Classified" ui-sref="home.browse.classified">
         </ion-tab>
         <ion-tab title="Search" ui-sref="home.browse.search">
         </ion-tab>
     </ion-tabs>
-    <ion-content has-header="true" padding="true">
+    <ion-content class="has-tabs-top">
       <div ui-view name="browsing"></div>
     </ion-content>
 </ion-view>
