--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -1,9 +1,9 @@
 <ion-view title="Details">
-    <ion-nav-buttons side="secondary">
+    <ion-nav-buttons side="secondary"> <!-- Place Nav icon on the right -->
       <button class="button button-icon icon ion-ios-location"></button>
     </ion-nav-buttons>
     
-    <ion-content has-header="true" padding="true">
+    <ion-content has-header="true">
     <div class="container-fluid">
         <div class="row">
           <div style="float: none; margin: 0 auto;" class="col col-50" >
