--- a/www/templates/chat/chat.html
+++ b/www/templates/chat/chat.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Messaging">
-    <ion-content has-header="true" padding="true">
+    <ion-content>
         <div class="list list-inset">
              <label class="item item-input">
              <i class="icon ion-search placeholder-icon"></i>
