--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -1,47 +1,10 @@
-<div class="row">
-      <div class="col col-50" >
-        <div class="list-card">
-          <a class="item item-image" ui-sref="home.details({dId: 1})"><img class="full-image" src="img/event1.jpg"></a>
-          <div class="item item-divider footerCard">
-            Six Flags
-            <br/>
-            <i class="icon ion-ios-heart"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-50" >
-        <div class="list-card">
-          <a class="item item-image" ui-sref="home.details({dId: 2})"><img class="full-image" src="img/event2.jpg"></a>
-          <div class="item item-divider footerCard">
-            Literacy Event
-            <br/>
-            <i class="icon ion-ios-heart"></i>
-          </div>
-        </div>
-      </div>
+<div collection-repeat="post in posts" item-width="50%" item-height="45%">
+  <div class="list-card">
+    <a class="item item-image" href="#/browse/details/{{post.id}}"><img class="full-image" ng-src="{{post.img}}"></a>
+    <div class="item item-divider footerCard">
+      {{post.title}}
+      <br/>
+      <i class="icon ion-ios-heart"></i>
     </div>
-
-    <div class="row">
-      <div class="col col-50" >
-        <div class="list-card">
-          <a class="item item-image" ui-sref="home.details({dId: 3})""><img class="full-image" src="img/event3.jpg"></a>
-          <div class="item item-divider footerCard">
-            WorkAholics
-            <br/>
-            <i class="icon ion-ios-heart"></i>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-50" >
-        <div class="list-card">
-          <a class="item item-image" ui-sref="home.details({dId: 4})""><img class="full-image" src="img/event4.jpg"></a>
-          <div class="item item-divider footerCard">
-            Basket Ball
-            <br/>
-            <i class="icon ion-ios-heart"></i>
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
+</div>
