--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -1,35 +1,16 @@
 <ion-view title="Details">
-    <ion-nav-buttons side="secondary"> <!-- Place Nav icon on the right -->
-      <button class="button button-icon icon ion-ios-location"></button>
-    </ion-nav-buttons>
+  <ion-nav-buttons side="secondary"> <!-- Place Nav icon on the right -->
+    <button class="button button-icon icon ion-ios-location"></button>
+  </ion-nav-buttons>
     
-    <ion-content has-header="true">
-    <div class="container-fluid">
-        <div class="row">
-          <div style="float: none; margin: 0 auto;" class="col col-50" >
-            <div class="list-card">
-              <a class="item item-image" href="#/browse/featured/details/1"><img class="full-image" src="img/event1.jpg"></a>
-              <div class="item item-divider footerCard">
-                Six Flags
-                <br/>
-                <i class="icon ion-ios-heart"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col-offset-25 col-50">
-            </div>
-            <div class="col-5 col-offset-20">
-              <i class="icon ion-ios-heart">100</i>
-            </div>
-        </div>
-        <div class="row">
-          <div style="float: none; margin: 0 auto;" >
-            Practice
-          </div>
-        </div>
-        <hr>
+  <ion-content has-header="true">
+    <div class="list-card">
+      <a class="item item-image"><img class="full-image" ng-src="{{post.img}}"></a>
+      <div class="item item-divider footerCard">
+        {{post.title}}
+        <br/>
+        <i class="icon ion-ios-heart"></i>
+      </div>
     </div>
-    </ion-content>
+  </ion-content>
 </ion-view>
