--- a/www/templates/browse/search.html
+++ b/www/templates/browse/search.html
@@ -1,10 +1,27 @@
-<div collection-repeat="post in posts | limitTo:7" item-width="50%" item-height="45%">
-  <div class="list-card">
-    <a class="item item-image" href="#/browse/details/{{post.id}}"><img class="full-image" ng-src="{{post.img}}"></a>
-    <div class="item item-divider footerCard">
-      {{post.title}}
-      <br/>
-      <i class="icon ion-ios-heart"></i>
+<div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0" style="background-color:#EDEDED;">
+
+  <div class="col col-50" ng-if="$index < posts.length">
+    <div class="list-card">
+	  <a class="item item-image" href="#/browse/details/{{posts[$index].id}}">
+		<img class="full-image" ng-src="{{posts[$index].img}}">
+	  </a>
+	  <div class="item">
+	    {{posts[$index].title}}
+	    <br/>
+	    <i class="icon ion-ios-heart"></i>
+	  </div>
     </div>
+  </div>
+  <div class="col col-50" ng-if="$index +1 < posts.length">
+    <div class="list-card">
+	  <a class="item item-image" href="#/browse/details/{{posts[$index + 1].id}}">
+		<img class="full-image" ng-src="{{posts[$index + 1].img}}">
+	  </a>
+	  <div class="item">
+	    {{posts[$index + 1].title}}
+		<br/>
+		<i class="icon ion-ios-heart"></i>
+	  </div>
+	</div>
   </div>
 </div>
