--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -1,4 +1,4 @@
-<div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0" style="background-color:#EDEDED;">
+<div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0">
 
   <div class="col col-50" ng-if="$index < posts.length">
     <div class="list-card">
@@ -12,7 +12,7 @@
 	  </div>
     </div>
   </div>
-  <div class="col col-50" ng-if="$index +1 < posts.length">
+  <div class="col col-50" ng-if="$index + 1 < posts.length">
     <div class="list-card">
 	  <a class="item item-image" href="#/browse/details/{{posts[$index + 1].id}}">
 		<img class="full-image" ng-src="{{posts[$index + 1].img}}">
