--- a/www/templates/browse/search.html
+++ b/www/templates/browse/search.html
@@ -1,4 +1,4 @@
-<div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0" style="background-color:#EDEDED;">
+<div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0">
 
   <div class="col col-50" ng-if="$index < posts.length">
     <div class="list-card">
