--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -3,14 +3,40 @@
     <button class="button button-icon icon ion-ios-location"></button>
   </ion-nav-buttons>
     
-  <ion-content has-header="true">
-    <div class="list-card">
-      <a class="item item-image"><img class="full-image" ng-src="{{post.img}}"></a>
-      <div class="item item-divider footerCard">
-        {{post.title}}
-        <br/>
-        <i class="icon ion-ios-heart"></i>
+  <ion-content class="has-header" scroll="false" style="background-color: #F0F0F0;">
+
+    <ion-slide-box style="background-color: #CFDFEC;">
+      <ion-slide style="text-align:center;">
+        <img style="height:19em; width:19em;" ng-src="{{post.img}}">
+      </ion-slide>
+      <ion-slide style="text-align:center;">
+        <img style="height:19em; width:19em;" ng-src="{{post.img}}">
+      </ion-slide>
+      <ion-slide style="text-align:center;">
+        <img style="height:19em; width:19em;" ng-src="{{post.img}}">
+      </ion-slide>
+    </ion-slide-box>
+    
+    <h3 style="text-align:center;">{{post.title}}</h3>
+    <div >
+      <div class="list-card padding">
+        <div class="item item-body">
+          <p><span class="positive padding" style="font-size: 1.5em;">When </span> {{post.when}}</p>
+          <p><span class="positive padding" style="font-size: 1.5em;">Where </span> {{post.where}}</p>
+        </div>
+        <div class="item tabs">
+          <a class="tab-item" href="#">
+            <i class="icon ion-ios-heart assertive"></i>
+          </a>
+          <a class="tab-item" href="#">
+            <i class="icon ion-android-share-alt"></i>
+          </a>
+          <a class="tab-item" href="#">
+            <i class="icon ion-ios-undo"></i>
+          </a>
+        </div>
       </div>
     </div>
+
   </ion-content>
 </ion-view>
