--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -3,7 +3,7 @@
     <button class="button button-icon icon ion-ios-location"></button>
   </ion-nav-buttons>
     
-  <ion-content class="has-header" scroll="false" style="background-color: #F0F0F0;">
+  <ion-content class="has-header" style="background-color: #F0F0F0;">
 
     <ion-slide-box style="background-color: #CFDFEC;">
       <ion-slide style="text-align:center;">
@@ -18,8 +18,7 @@
     </ion-slide-box>
     
     <h3 style="text-align:center;">{{post.title}}</h3>
-    <div >
-      <div class="list-card padding">
+      <div class="list card padding">
         <div class="item item-body">
           <p><span class="positive padding" style="font-size: 1.5em;">When </span> {{post.when}}</p>
           <p><span class="positive padding" style="font-size: 1.5em;">Where </span> {{post.where}}</p>
@@ -36,7 +35,5 @@
           </a>
         </div>
       </div>
-    </div>
-
   </ion-content>
 </ion-view>
