Experiencing new layout for the brwose featured tab

--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -2,7 +2,7 @@
     
     <ion-nav-buttons></ion-nav-buttons> <!-- This code here actually fixes the back button bug! -->
 
-    <ion-tabs class="tabs-striped tabs-top">
+    <ion-tabs class="tabs-striped tabs-top tabs-color-positive">
         <ion-tab title="Featured" ui-sref="home.browse.featured">
         </ion-tab>
         <ion-tab title="Bulletin" ui-sref="home.browse.bulletin">
@@ -15,7 +15,7 @@
         </ion-tab>
     </ion-tabs>
     
-    <ion-content class="has-tabs-top" style="background-color:#EDEDED;">
+    <ion-content class="has-tabs-top" style="background-color:red;">
       <div ui-view name="browsing"></div>
     </ion-content>
 </ion-view>
