--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -15,7 +15,7 @@
         </ion-tab>
     </ion-tabs>
     
-    <ion-content class="has-tabs-top" style="background-color:red;">
+    <ion-content class="has-tabs-top" style="background-color:#EDEDED;">
       <div ui-view name="browsing"></div>
     </ion-content>
 </ion-view>
