--- a/www/templates/browse/featured.html
+++ b/www/templates/browse/featured.html
@@ -1,27 +1,17 @@
 <div class="row" ng-repeat="post in posts" ng-if="$index % 2 === 0">
 
   <div class="col" ng-if="$index < posts.length">
-    <div class="list card" style="box-shadow:0 2px 10px black; border-radius: 5px;">
+    <div class="list card" style="box-shadow:0 1px 5px black; border-radius: 4px; margin:0;">
 	  <a class="item item-image" href="#/browse/details/{{posts[$index].id}}">
 		<img class="full-image" ng-src="{{posts[$index].img}}">
 	  </a>
-	  <div class="item">
-	    {{posts[$index].title}}
-	    <br/>
-	    <i class="icon ion-ios-heart"></i>
-	  </div>
     </div>
   </div>
   <div class="col" ng-if="$index + 1 < posts.length">
-    <div class="list card" style="box-shadow:0 2px 10px black; border-radius: 5px;">
+    <div class="list card" style="box-shadow:0 1px 5px black; border-radius: 4px; margin:0;">
 	  <a class="item item-image" href="#/browse/details/{{posts[$index + 1].id}}">
 		<img class="full-image" ng-src="{{posts[$index + 1].img}}">
 	  </a>
-	  <div class="item">
-	    {{posts[$index + 1].title}}
-		<br/>
-		<i class="icon ion-ios-heart"></i>
-	  </div>
 	</div>
   </div>
 </div>
