--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -2,32 +2,30 @@
   <ion-nav-buttons side="secondary">
     <button class="button button-icon icon ion-ios-location" ng-click=""></button>
   </ion-nav-buttons>
-    
+
   <ion-content class="has-header" scroll="false" style="background-color: #F0F0F0;">
-    
+<ion-scroll>
     <ion-slide-box style="background-color: #CFDFEC;">
-      <ion-slide style="text-align:center;">
-        <a href="">
-          <img style="height:18em; width:18em;" ng-src="{{post.img}}">
+
+      <ion-slide style="text-align:center; height:260px;">
+        <a href="" class="item item-image">
+          <img class="full-image" ng-src="{{post.img}}">
         </a>
       </ion-slide>
+
       <ion-slide style="text-align:center;">
-        <a href="">
-          <img style="height:18em; width:18em;" ng-src="{{post.img}}">
+        <a href="" class="item item-image" style="height:260px;">
+          <img class="full-image" ng-src="{{post.img}}">
         </a>
       </ion-slide>
+
       <ion-slide style="text-align:center;">
-        <a href="">
-          <img style="height:18em; width:18em;" ng-src="{{post.img}}">
-        </a>
-      </ion-slide>
-      <ion-slide style="text-align:center;">
-        <a href="">
-          <img style="height:18em; width:18em;" ng-src="{{post.img}}">
+        <a href="" class="item item-image" style="height:260px;">
+          <img class="full-image" ng-src="{{post.img}}">
         </a>
       </ion-slide>
     </ion-slide-box>
-    
+
     <h3 style="text-align:center;">{{post.title}}</h3>
       <div class="list card" style="margin-bottom:5px;">
         <div class="item item-body">
@@ -37,7 +35,7 @@
         </div>
         <div class="item tabs">
           <a class="tab-item" href="#">
-            <i class="icon ion-ios-heart assertive"></i>
+            <i class="icon ion-pin"></i>
           </a>
           <a class="tab-item" href="#">
             <i class="icon ion-android-share-alt"></i>
@@ -51,5 +49,6 @@
       <h5 style="text-align:right; margin:0;">Posted by {{post.postedAuthor}}</h5>
       <h5 style="text-align:right; margin:0;">{{post.postedDate}}</h5>
       </div>
+      </
   </ion-content>
 </ion-view>
