--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -3,8 +3,8 @@
   <ion-tab title="Browse" icon="ion-eye" ui-sref="home.browse.featured">
       <ion-nav-view name="browse"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="Pin"  icon="ion-pin" ui-sref="home.chat">
-      <ion-nav-view name="chat"></ion-nav-view>
+  <ion-tab title="Pin"  icon="ion-pin" ui-sref="home.pin">
+      <ion-nav-view name="pin"></ion-nav-view>
   </ion-tab>
   <ion-tab title="Profile" icon="ion-ios-person" ui-sref="home.profile">
       <ion-nav-view name="profile"></ion-nav-view>
