details page redesigned to match An. Still need to make the header and footer bar disappear

--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -13,7 +13,7 @@
         </ion-tab>
     </ion-tabs>
 
-    <ion-content class="has-tabs-top" style="background-color:#EDEDED;">
+    <ion-content class="has-tabs-top" style="background-color:#FAFAFA;">
       <div ui-view name="browsing"></div>
     </ion-content>
 </ion-view>
