--- a/www/templates/browse/details.html
+++ b/www/templates/browse/details.html
@@ -1,8 +1,9 @@
-<ion-view title="Details">
-  <ion-nav-buttons side="secondary">
-  </ion-nav-buttons>
-
-  <ion-content class="has-header" style="background-color: #FAFAFA;">
+<ion-view>
+<ion-nav-bar class="bar-clear">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
+  <ion-content style="top:0;background-color: #FAFAFA;">
 
       <div class="item item-image" style="text-align:center; height:260px;">
         <a href="" class="item item-image">
