Some of posts page

--- a/www/templates/post/post.html
+++ b/www/templates/post/post.html
@@ -1,5 +1,27 @@
 <ion-view title="Posting">
     <ion-content has-header="true" padding="true">
-      <p>This is post.</p>
+      <div class="list list-inset">
+        <label class="item item-input item-select">
+          <div class="input-label" style="color:grey">
+              Category
+          </div>
+          <select>
+            <option selected>Bulletin</option>
+            <option>Classified</option>
+          </select>
+        </label>
+        <br/>
+        <label class="item item-input">
+          <input type="text" placeholder="Title">
+        </label>
+        <br/>
+        <label class="item item-input">
+          <input type="text" placeholder="When">
+        </label>
+        <br/>
+        <label class="item item-input">
+          <input type="text" placeholder="Where">
+        </label>
+      </div>
     </ion-content>
 </ion-view>
